--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/typeorm": "^10.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "moment-timezone": "^0.5.45",
     "mssql": "^10.0.2",
     "mysql2": "^3.9.3",
     "passport-jwt": "^4.0.1",
