--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "oberon360-api",
+  "name": "oberon360",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -19,8 +19,12 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./apps/oberon360-api/test/jest-e2e.json"
   },
+  "prisma": {
+    "schema": "prisma/schema.prisma"
+  },
   "dependencies": {
     "@aws-sdk/client-rekognition": "^3.540.0",
+    "@nestjs/axios": "^3.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.1",
     "@nestjs/core": "^10.0.0",
@@ -31,13 +35,25 @@
     "@nestjs/serve-static": "^4.0.2",
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/typeorm": "^10.0.2",
+    "@prisma/client": "^5.2.0",
+    "axios": "^1.6.2",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "dayjs": "^1.11.10",
+    "docusign-esign": "^6.1.0",
+    "exceljs": "^4.4.0",
+    "handlebars": "^4.7.8",
+    "html-pdf-node": "^1.0.8",
     "moment-timezone": "^0.5.45",
+    "mongoose": "^7.5.0",
     "mssql": "^10.0.2",
     "mysql2": "^3.9.3",
     "nest": "^0.1.6",
+    "nodemailer": "^6.9.7",
+    "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20"
@@ -46,10 +62,16 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/docusign-esign": "^5.19.0",
     "@types/express": "^4.17.17",
+    "@types/html-pdf-node": "^1.0.2",
     "@types/jest": "^29.5.2",
-    "@types/node": "^20.3.1",
+    "@types/multer": "^1.4.9",
+    "@types/node": "^20.12.7",
+    "@types/nodemailer": "^6.4.13",
     "@types/passport-jwt": "^4.0.1",
+    "@types/passport-local": "^1.0.35",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
@@ -58,13 +80,15 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
+    "prisma": "^5.2.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "webpack": "^5.91.0"
   },
   "jest": {
     "moduleFileExtensions": [
