--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,19 +1,19 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#0B0B34",//carpeta lado izquierdo
-        "activityBar.background": "#0B0B34",//barra lado izquierdo
+        "activityBar.activeBackground": "#162435",//carpeta lado izquierdo
+        "activityBar.background": "#162435",//barra lado izquierdo
         "activityBar.foreground": "#e7e7e7",
         "activityBar.inactiveForeground": "#e7e7e799",
         "activityBarBadge.background": "#1b0e05",
         "activityBarBadge.foreground": "#e7e7e7",
         "commandCenter.border": "#e7e7e799",
         "sash.hoverBorder": "#5c1eb4",
-        "statusBar.background": "#0B0B34",//barra abajo
+        "statusBar.background": "#162435",//barra abajo
         "statusBar.foreground": "#e7e7e7",
         "statusBarItem.hoverBackground": "#5c1eb4",
-        "statusBarItem.remoteBackground": "#0B0B34",//>< lado izquierdo
+        "statusBarItem.remoteBackground": "#162435",//>< lado izquierdo
         "statusBarItem.remoteForeground": "#e7e7e7",
-        "titleBar.activeBackground": "#0B0B34",//barra arriba
+        "titleBar.activeBackground": "#162435",//barra arriba
         "titleBar.activeForeground": "#e7e7e7",
         "titleBar.inactiveBackground": "#46178899",
         "titleBar.inactiveForeground": "#e7e7e799"
